# dupe-krill-organize

./: .gitignore  flake.nix  pyproject.toml
dko/: analysis.py  cli.py  cmd_dirs.py  run_utils.py
dko/widgets/: delete_same_dirs_modal.py  dirs.py  regex_filter_modal.py
scripts/: pre-commit-checks.sh
tests/: test_cli.py
